fix mail for production

--- a/.env_production
+++ b/.env_production
@@ -20,3 +20,12 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_ENCRYPTION=tls
+MAIL_USERNAME=lbaw2382@gmail.com
+MAIL_PASSWORD=pxripaxbwncbvjnh
+MAIL_FROM_ADDRESS=lbaw2382@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
